@@ -900,6 +900,7 @@ ERROR = Error
 WRONG_FIELD_COUNT = Wrong number of fields per line.
 SUSPECT_DATE = Date before the year %1.
 FUTURE_DATE = Date in the future.
+WEEKEND_QUOTE = Weekend quotes are not supported.
 DAY_LOW_NOT_LOWEST = Day low was not the lowest quote. Fixed.
 DAY_HIGH_NOT_HIGHEST = Day high was not the highest quote. Fixed.
 DAY_LOW_LESS_THAN_ZERO = Day low was less than zero. Fixed.
